fixed counting remover overdelegate

--- a/MacMine/UI/Base.lproj/Main.storyboard
+++ b/MacMine/UI/Base.lproj/Main.storyboard
@@ -182,9 +182,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="900" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
-                    <connections>
-                        <outlet property="label" destination="tRb-VH-PQU" id="csH-UH-STX"/>
-                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -224,7 +221,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <gridView fixedFrame="YES" xPlacement="leading" yPlacement="bottom" rowAlignment="none" translatesAutoresizingMaskIntoConstraints="NO" id="LrZ-aw-EbF">
-                                <rect key="frame" x="20" y="163" width="110" height="417"/>
+                                <rect key="frame" x="20" y="230" width="110" height="350"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <rows>
                                     <gridRow id="Gzq-Ej-Odb"/>
@@ -236,10 +233,8 @@
                                     <gridRow id="Kfz-K2-sfe"/>
                                     <gridRow id="x9d-EC-V9T"/>
                                     <gridRow id="qgq-PK-MG6"/>
-                                    <gridRow id="bco-Ob-Dc5"/>
-                                    <gridRow id="673-AA-8I7"/>
-                                    <gridRow id="1Wf-uX-hZs"/>
-                                    <gridRow id="hrT-HF-OyV"/>
+                                    <gridRow id="pkX-cC-2Nt"/>
+                                    <gridRow id="lTH-au-GyC"/>
                                 </rows>
                                 <columns>
                                     <gridColumn id="zEw-cT-7mW"/>
@@ -247,7 +242,7 @@
                                 <gridCells>
                                     <gridCell row="Gzq-Ej-Odb" column="zEw-cT-7mW" id="QNS-n0-PKM">
                                         <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bXc-je-NHl">
-                                            <rect key="frame" x="-6" y="385" width="122" height="36"/>
+                                            <rect key="frame" x="-6" y="318" width="122" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="eeP-Vd-l3W"/>
                                                 <constraint firstAttribute="height" constant="25" id="lyP-aM-D6m"/>
@@ -261,10 +256,23 @@
                                             </connections>
                                         </button>
                                     </gridCell>
-                                    <gridCell row="sO9-df-kGi" column="zEw-cT-7mW" id="XYm-Ic-zOv"/>
+                                    <gridCell row="sO9-df-kGi" column="zEw-cT-7mW" id="XYm-Ic-zOv">
+                                        <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tgc-Gc-dOf">
+                                            <rect key="frame" x="-2" y="294" width="114" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="2jR-np-9cW"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="owo-Ew-VcF"/>
+                                            </constraints>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Статус" id="Ndh-1z-e1j">
+                                                <font key="font" size="13" name="AmericanTypewriter"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                    </gridCell>
                                     <gridCell row="XpW-q4-YqO" column="zEw-cT-7mW" id="lZh-iq-uaz">
                                         <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JCN-O4-NlV">
-                                            <rect key="frame" x="-6" y="318" width="122" height="36"/>
+                                            <rect key="frame" x="-6" y="256" width="122" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="FeO-s6-y3o"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="UsV-cg-DD2"/>
@@ -280,7 +288,7 @@
                                     </gridCell>
                                     <gridCell row="JJp-DL-4ac" column="zEw-cT-7mW" id="dRg-E3-NHP">
                                         <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N8i-GT-fMv">
-                                            <rect key="frame" x="-6" y="287" width="122" height="36"/>
+                                            <rect key="frame" x="-6" y="225" width="122" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="6b4-Cr-IkZ"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="aJx-FC-15F"/>
@@ -294,10 +302,9 @@
                                             </connections>
                                         </button>
                                     </gridCell>
-                                    <gridCell row="OuD-gq-OLe" column="zEw-cT-7mW" id="8h2-QV-2vT"/>
-                                    <gridCell row="WMz-fc-sOo" column="zEw-cT-7mW" id="Wtx-AP-djO">
+                                    <gridCell row="OuD-gq-OLe" column="zEw-cT-7mW" id="8h2-QV-2vT">
                                         <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ACm-kB-yoa">
-                                            <rect key="frame" x="-6" y="220" width="122" height="36"/>
+                                            <rect key="frame" x="-6" y="194" width="122" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="1BA-q4-dtT"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="SEI-84-ojn"/>
@@ -311,10 +318,9 @@
                                             </connections>
                                         </button>
                                     </gridCell>
-                                    <gridCell row="Kfz-K2-sfe" column="zEw-cT-7mW" id="Dhy-MM-ffQ"/>
-                                    <gridCell row="x9d-EC-V9T" column="zEw-cT-7mW" id="1Pk-L2-1RV">
+                                    <gridCell row="WMz-fc-sOo" column="zEw-cT-7mW" id="Wtx-AP-djO">
                                         <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="62T-cT-blp">
-                                            <rect key="frame" x="-6" y="153" width="122" height="36"/>
+                                            <rect key="frame" x="-6" y="163" width="122" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="Xmz-my-pp7"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="aje-BO-0eX"/>
@@ -328,53 +334,32 @@
                                             </connections>
                                         </button>
                                     </gridCell>
-                                    <gridCell row="qgq-PK-MG6" column="zEw-cT-7mW" id="p4U-F3-bbQ"/>
-                                    <gridCell row="bco-Ob-Dc5" column="zEw-cT-7mW" id="ZKu-qj-CyL">
-                                        <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tRb-VH-PQU">
-                                            <rect key="frame" x="-2" y="93" width="114" height="25"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="Oeo-bY-bTE"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="ZRS-Qo-FBi"/>
-                                            </constraints>
-                                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Label" id="YGF-xA-0k5">
-                                                <font key="font" size="13" name="AmericanTypewriter"/>
-                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            </textFieldCell>
-                                        </textField>
-                                    </gridCell>
-                                    <gridCell row="673-AA-8I7" column="zEw-cT-7mW" id="GHI-7P-Yuf">
-                                        <progressIndicator key="contentView" wantsLayer="YES" maxValue="100" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="Kff-Pg-Ffl">
-                                            <rect key="frame" x="0.0" y="61" width="110" height="27"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="25" id="PBz-no-A2q"/>
-                                                <constraint firstAttribute="width" constant="110" id="fEb-ti-F3C"/>
-                                            </constraints>
-                                        </progressIndicator>
-                                    </gridCell>
-                                    <gridCell row="1Wf-uX-hZs" column="zEw-cT-7mW" id="AhI-7P-a19">
+                                    <gridCell row="Kfz-K2-sfe" column="zEw-cT-7mW" id="Dhy-MM-ffQ"/>
+                                    <gridCell row="x9d-EC-V9T" column="zEw-cT-7mW" id="1Pk-L2-1RV">
                                         <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pnd-NZ-Bai">
-                                            <rect key="frame" x="-2" y="31" width="114" height="25"/>
+                                            <rect key="frame" x="-2" y="103" width="114" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="Tuw-kO-TZU"/>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="fX8-Ng-Abo"/>
                                             </constraints>
-                                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Label" id="iUD-nP-F9F">
+                                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Открыто: 0 %" id="iUD-nP-F9F">
                                                 <font key="font" size="13" name="AmericanTypewriter"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
                                     </gridCell>
-                                    <gridCell row="hrT-HF-OyV" column="zEw-cT-7mW" id="Fnu-me-uSW">
+                                    <gridCell row="qgq-PK-MG6" column="zEw-cT-7mW" id="p4U-F3-bbQ">
                                         <progressIndicator key="contentView" wantsLayer="YES" maxValue="100" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="shR-bH-OzT">
-                                            <rect key="frame" x="0.0" y="-1" width="110" height="27"/>
+                                            <rect key="frame" x="0.0" y="71" width="110" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="110" id="0Is-4B-yLo"/>
                                                 <constraint firstAttribute="height" constant="25" id="t3f-Fo-eis"/>
                                             </constraints>
                                         </progressIndicator>
                                     </gridCell>
+                                    <gridCell row="pkX-cC-2Nt" column="zEw-cT-7mW" id="mJO-hg-CsH"/>
+                                    <gridCell row="lTH-au-GyC" column="zEw-cT-7mW" id="lDD-Tu-cad"/>
                                 </gridCells>
                             </gridView>
                         </subviews>
@@ -382,8 +367,7 @@
                     <connections>
                         <outlet property="fieldProgres" destination="shR-bH-OzT" id="vP7-lW-y5s"/>
                         <outlet property="filedOpenInfoLabel" destination="pnd-NZ-Bai" id="P6g-uL-0Mi"/>
-                        <outlet property="minesOpenInfolabel" destination="tRb-VH-PQU" id="LnS-et-X3S"/>
-                        <outlet property="minesProgres" destination="Kff-Pg-Ffl" id="WHT-b1-RJ9"/>
+                        <outlet property="statusLabel" destination="tgc-Gc-dOf" id="MPW-oe-lSY"/>
                     </connections>
                 </viewController>
                 <customObject id="H4a-gj-cvz" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
